[package]
name = "audit-core"
version = "0.1.0"
edition = "2021"
description = "Internal RPC auditing and stress-testing toolkit."

[dependencies]
# Async runtime and concurrency
tokio = { version = "1.30", features = ["full"] }
futures = "0.3"

# Solana core (crucial for realism)
solana-client = "1.16"
solana-sdk = "1.16"

# Metrics and logging
log = "0.4"
env_logger = "0.10"
chrono = "0.4"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
